--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Android Engineer CodeCheck</string>
-    <string name="searchInputText_hint">You can search for GitHub repositories!</string>
-    <string name="written_owner">Written by %s</string>
-    <string name="created_at">created at:  %s</string>
-    <string name="updated_at">updated at:\n %s</string>
-    <string name="language">language: %s</string>
+    <string name="searchInputText_hint">GitHub のリポジトリを検索できるよー</string>
+    <string name="written_owner">%sによって書かれました</string>
+    <string name="created_at">作成日時:\n %s</string>
+    <string name="updated_at">更新日時:\n %s</string>
+    <string name="language">言語: %s</string>
     <string name="star_count">stars: %s</string>
     <string name="watchers_count">watchers: %s</string>
     <string name="forks_count">forks: %s</string>
     <string name="open_issues_count">open issues: %s</string>
     <string name="topic_count">topics: %s</string>
     <string name="licence">LICENCE NAME: %s</string>
-    <string name="search_update_at">Last search update: %s</string>
+    <string name="search_update_at">最終更新: %s</string>
 </resources>
