--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -17,4 +17,5 @@
     <string name="error_description">インターネット接続を確認して、もう一度お試しください</string>
     <string name="error_retry">再試行</string>
     <string name="close">閉じる</string>
+    <string name="search_result">検索結果: %s件</string>
 </resources>
