--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Android Engineer CodeCheck</string>
     <string name="searchInputText_hint">You can search for Repositories!</string>
     <string name="written_owner">Written by %s</string>
-    <string name="created_at">created at:  %s</string>
+    <string name="created_at">created at:\n  %s</string>
     <string name="updated_at">updated at:\n %s</string>
     <string name="language">language: %s</string>
     <string name="star_count">stars: %s</string>
@@ -17,4 +17,5 @@
     <string name="error_description">Please check your internet connection and try again.</string>
     <string name="error_retry">Retry</string>
     <string name="close">Close</string>
+    <string name="search_result">search: %s</string>
 </resources>
