--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="close">Close</string>
     <string name="search_result">search: %s</string>
     <string name="sort">Sort</string>
+    <string name="open_in_new">Open In New</string>
 </resources>
